# AI-Sales-Agent-for-Website-Consulting

./: .env.example  .gitignore  BUSINESS_CASE.md  README.md  config.py  main.py  pyproject.toml  ui.py
agents/: __init__.py  contact_discovery.py  digital_gap_analysis.py  email_draft.py  google_maps_scraper.py  personalization.py  presence_reconstruction.py  prospecting.py  scoring.py  website_analysis.py  website_crawl.py  website_router.py
models/: __init__.py  analysis.py  business.py  lead.py
pipeline/: __init__.py  orchestrator.py  review_queue.py
